TERRAFORM/Terragrunt/Jed-code/terraform-jed-03/terraform-library/security-group/web/main.tf
### Create a Security Group for the WordPress instance!

terraform {
  backend "s3" {}
  required_version = ">= 0.12.26" # Required for compatibility with TF 13 style provider block
}


resource "aws_security_group" "webserver_sg" {

  description = "HTTP, PING, SSH"
  name = "webserver-sg"
  vpc_id = data.aws_vpc.dev_vpc.id

  ingress {
    description = "HTTP for webserver"
    from_port   = 80
    to_port     = 80
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  # Created an inbound rule for ping
  ingress {
    description = "Ping"
    from_port   = 0
    to_port     = 0
    protocol    = "ICMP"
    cidr_blocks = ["0.0.0.0/0"]
  }

  # Created an inbound rule for SSH
  ingress {
    description = "SSH"
    from_port   = 22
    to_port     = 22
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  # Outward Network Traffic for the WordPress
  egress {
    description = "output from webserver"
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }
  tags = {
    "Name" = "webserver-sg"
  }
}
